* type=rule actions=exporttoexcel | extend with column 'url-category'
* type=bpa-generator | introduction to support offline XML config file
* type=bpa-generator | improve offline config handling
* type=tsf | in addition to extract XML config, also extract /tmp/cli/techsupport_*.txt
* type=bpa-generator | introduce support to reach techsupport.txt from TSF /tmp/cli/techsupport_*.txt

BUGFIX:
* type=gcp actions=download | bugfix to handle command order correctly
* type=rule actions=stats-XYZ-FastAPI | bugfix to read argument correctly

GENERAL:
* GENERAL: Device App-ID update to version: 8763-8333


2.1.19 (20231006)
UTIL:
* different classes | improve usage of flag 'XML_PARSE_BIG_LINES' in method loadXML
* class PANConf / Panoramaconfg | implement method ChildDeviceGroups() for 'location=shared:excludemaindg'
* type=gcp | introduce argument 'namespace=XYZ' to specify and better filter for get pods
* type=device | introduce actions=virtualSystem-delete/sharedgateway-delete/sharedgateway-migrate-to-vsys
* type=static-route | introduction of new type= | with 'filter=(nexthop-ip is.set)' / (nexthop-vr is.set) / nexthop-interface is.set) /  (destination ip4.includes-full 172.33.10.0/23)
* type=static-route actions=delete | introduce new action
* type=rule | introduce actions=from-/to-remove-from-file:FILE.txt
* type=XYZ | introduce new arguments: shadow-loadreduce - to not update TAG object related address-groups | debugloadtime - display load time for specific XML sections
* develop | introduce config_validation.php
* type=appid-toolbox | improvements for further. new features - example rule address/service report generator
* type=rule actions=name-replace-character | set default value for replace to ''
* type=rule | introduce new actions=stats-appid-fastapi:-90days/stats-service-fastapi:/stats-address-source-fastapi/stats-address-destination-fastapi/stats-address-fastapi/stats-traffic-fastapi
* type=routing | introduce actions=exporttoexcel:file.html