@@ -9,6 +9,7 @@ UTIL:
 * type=bpa-generator | improve offline config handling
 * type=tsf | in addition to extract XML config, also extract /tmp/cli/techsupport_*.txt
 * type=bpa-generator | introduce support to reach techsupport.txt from TSF /tmp/cli/techsupport_*.txt
+* type=bpa-generator | introduce support to handle TSF file from 11.1
 
 BUGFIX:
 * type=gcp actions=download | bugfix to handle command order correctly
